--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,14 +6,15 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-22.04
+  os: Linux
   tools:
-    python: "3.12"
+      - python >=3
+      - setuptools
+    run:
+      python: "3.8"
+      numpy: "1.23"
+      pandas: "1.4.3"
+      pyranges: "0.0.117"
 
 mkdocs:
   configuration: mkdocs.yml
-
-# Optionally declare the Python requirements required to build your docs
-python:
-  install:
-  - requirements: docs/requirements.txt
