--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: "Linux"
+  os: ubuntu-22.04
   tools:
       python: "3.8"
       numpy: "1.23"
